fix header hanging over top of the table on initial page load on mobile

--- a/backend/src/public/css/unused/draftyspreadsheet.css
+++ b/backend/src/public/css/unused/draftyspreadsheet.css
@@ -263,7 +263,6 @@ template {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem 1rem;
 }
 
 .navbar-brand {
